--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </header>
     <main>
-        <div class="mainVisual">
+        <section class="mainVisual">
             <div class="mainSlide">
                 <div class="itm itm01">
                     <div class="left"></div>
@@ -76,7 +76,56 @@
                 <p>SHOPPING NEWS & EVENT</p>
                 <span class="line"></span>
             </div>
-        </div>
+        </section>
+        <section class="mainEvent">
+            <h2>Shopping News & Event</h2>
+            <p>잠깐! 지금 로그인 하시고 고객님의 구매 패턴, 취향에 기반한 쇼핑 정보를 만나보세요.</p>
+            <div class="event">
+                <div class="box">
+                    <img src="./img/event01.jpg" alt="">
+                    <div class="txt_box">
+                        <span>설맞이<span class="bars">센텀시티</span></span>
+                        <p>2023 설 선물<br />사전예약할인</p>
+                        <em>2023.01.02(월)까지 백화점 B1 행사장</em>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./img/event02.jpg" alt="">
+                    <div class="txt_box">
+                        <span>쇼핑뉴스<span class="bars">센텀시티</span></span>
+                        <p>패션스트리트(B2)<br />
+                            리뉴얼 오픈 축하 EVENT</p>
+                        <em>2022.12.15(금)부터 몰 B</em>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./img/event03.jpg" alt="">
+                    <div class="txt_box">
+                        <span>매직컬윈터판타지<span class="bars">센텀시티</span></span>
+                        <p>Magical Winter Fantasy</p>
+                        <em>2022.11.28(월) - 2022.12.30(금) 백화점 1F 센텀광장</em>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./img/event04.jpg" alt="">
+                    <div class="txt_box">
+                        <span>신세계멤버스바<span class="bars">센텀시티</span></span>
+                        <p>달콤 삽싸름한 낭만의 풍미<br />
+                            12월 스폐셜 티 커피</p>
+                        <em>2022.12.01(목) - 2022.12.31(토) 백화점 8F 센텀시티몰 3층</em>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./img/event05.jpg" alt="">
+                    <div class="txt_box">
+                        <span>이벤트<span class="bars">센텀시티</span></span>
+                        <p>12월 신세계 제휴카드 무이자 할부 혜택</p>
+                        <em>2022.12.01(목) - 2022.12.31(토) 신세계백화점 센텀시티</em>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer class="footer">
 
