--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <i class="xi-user-o"></i>
                     <a href=""><span>로그인</span></a>
                 </div>
-                <figure>
+                <figure class="ser">
                     <a href=""><i class="xi-search"></i></a>
                 </figure>
             </div>
@@ -79,7 +79,10 @@
         </section>
         <section class="mainEvent">
             <h2>Shopping News & Event</h2>
-            <p>잠깐! 지금 로그인 하시고 고객님의 구매 패턴, 취향에 기반한 쇼핑 정보를 만나보세요.</p>
+            <div class="tit">
+                <img src="./img/news_ico_login.gif" alt="">
+                <p><strong>잠깐! </strong>지금 <span><a href="">로그인</a></span> 하시고 고객님의 구매 패턴, 취향에 기반한 쇼핑 정보를 만나보세요.</p>
+            </div>
             <div class="event">
                 <div class="box">
                     <img src="./img/event01.jpg" alt="">
