--- a/index.html
+++ b/index.html
@@ -85,47 +85,60 @@
             </div>
             <div class="event">
                 <div class="box">
-                    <img src="./img/event01.jpg" alt="">
-                    <div class="txt_box">
-                        <span>설맞이<span class="bars">센텀시티</span></span>
-                        <p>2023 설 선물<br />사전예약할인</p>
-                        <em>2023.01.02(월)까지 백화점 B1 행사장</em>
-                    </div>
+                    <a href="">
+                        <img src="./img/event01.jpg" alt="">
+                        <div class="txt_box">
+                            <span>설맞이<span class="bars">센텀시티</span></span>
+                            <p>2023 설 선물<br />사전예약할인</p>
+                            <em>2023.01.02(월)까지 백화점 B1 행사장</em>
+                        </div>
+                    </a>
                 </div>
                 <div class="box">
-                    <img src="./img/event02.jpg" alt="">
-                    <div class="txt_box">
-                        <span>쇼핑뉴스<span class="bars">센텀시티</span></span>
-                        <p>패션스트리트(B2)<br />
-                            리뉴얼 오픈 축하 EVENT</p>
-                        <em>2022.12.15(금)부터 몰 B</em>
-                    </div>
+                    <a href="">
+                        <img src="./img/event02.jpg" alt="">
+                        <div class="txt_box">
+                            <span>쇼핑뉴스<span class="bars">센텀시티</span></span>
+                            <p>패션스트리트(B2)<br />
+                                리뉴얼 오픈 축하 EVENT</p>
+                            <em>2022.12.15(금)부터 몰 B</em>
+                        </div>
+                    </a>
                 </div>
                 <div class="box">
-                    <img src="./img/event03.jpg" alt="">
-                    <div class="txt_box">
-                        <span>매직컬윈터판타지<span class="bars">센텀시티</span></span>
-                        <p>Magical Winter Fantasy</p>
-                        <em>2022.11.28(월) - 2022.12.30(금) 백화점 1F 센텀광장</em>
-                    </div>
+                    <a href="">
+                        <img src="./img/event03.jpg" alt="">
+                        <div class="txt_box">
+                            <span>매직컬윈터판타지<span class="bars">센텀시티</span></span>
+                            <p>Magical Winter Fantasy</p>
+                            <em>2022.11.28(월) - 2022.12.30(금) 백화점 1F 센텀광장</em>
+                        </div>
+                    </a>
                 </div>
                 <div class="box">
-                    <img src="./img/event04.jpg" alt="">
-                    <div class="txt_box">
-                        <span>신세계멤버스바<span class="bars">센텀시티</span></span>
-                        <p>달콤 삽싸름한 낭만의 풍미<br />
-                            12월 스폐셜 티 커피</p>
-                        <em>2022.12.01(목) - 2022.12.31(토) 백화점 8F 센텀시티몰 3층</em>
-                    </div>
+                    <a href="">
+                        <img src="./img/event04.jpg" alt="">
+                        <div class="txt_box">
+                            <span>신세계멤버스바<span class="bars">센텀시티</span></span>
+                            <p>달콤 삽싸름한 낭만의 풍미<br />
+                                12월 스폐셜 티 커피</p>
+                            <em>2022.12.01(목) - 2022.12.31(토) 백화점 8F 센텀시티몰 3층</em>
+                        </div>
+                    </a>
                 </div>
                 <div class="box">
-                    <img src="./img/event05.jpg" alt="">
-                    <div class="txt_box">
-                        <span>이벤트<span class="bars">센텀시티</span></span>
-                        <p>12월 신세계 제휴카드 무이자 할부 혜택</p>
-                        <em>2022.12.01(목) - 2022.12.31(토) 신세계백화점 센텀시티</em>
-                    </div>
+                    <a href="">
+                        <img src="./img/event05.jpg" alt="">
+                        <div class="txt_box">
+                            <span>이벤트<span class="bars">센텀시티</span></span>
+                            <p>12월 신세계 제휴카드 무이자 할부 혜택</p>
+                            <em>2022.12.01(목) - 2022.12.31(토) 신세계백화점 센텀시티</em>
+                        </div>
+                    </a>
                 </div>
+            </div>
+            <div class="more">
+                <span>VIEW MORE</span>
             </div>
         </section>
 
