--- a/index.html
+++ b/index.html
@@ -138,10 +138,135 @@
                 </div>
             </div>
             <div class="more">
-                <span>VIEW MORE</span>
+                <a href=""><span>VIEW MORE</span></a>
             </div>
         </section>
+        <section class="mainArt">
+            <h2>Art &amp; Culture</h2>
+            <div class="art_content_wrap">
+                <div class="inner">
+                    <div class="left_tab">
+                        <div class="itm on">
+                            <span>SHINSEGAE GALLERY</span>
+                            <div class="tit">
+                                대구신세계<br />
+                                줍줍_사적인 채집
+                            </div>
+                            <a href="">VIEW MORE</a>
+                        </div>
+                        <div class="itm">
+                            <span>SHINSEGAE GALLERY</span>
+                            <div class="tit">
+                                광주신세계<br />
+                                연말기획전 <Pictures>
+                            </div>
+                            <a href="">VIEW MORE</a>
+                        </div>
+                        <div class="itm">
+                            <span>SHINSEGAE GALLERY</span>
+                            <div class="tit">
+                                대전신세계 Art & Science<br />
+                                정은혜 개인전: 내가 그리는 너
+                            </div>
+                            <a href="">VIEW MORE</a>
+                        </div>
+                        <div class="itm">
+                            <span>SHINSEGAE GALLERY</span>
+                            <div class="tit">
+                                본점<br />
+                                마이큐 MY Q _ 영원한 날들<br />
+                                EVERYDAY
+                            </div>
+                            <a href="">VIEW MORE</a>
+                        </div>
+                        <div class="itm">
+                            <span>SHINSEGAE ACADEMY</span>
+                            <div class="tit">
+                                신세계 아카데미<br />
+                                겨울학기 수강회원 모집
+                            </div>
+                            <a href="">VIEW MORE</a>
+                        </div>
+                    </div>
+                    <div class="arrows">
+                        <i class="xi-angle-left"></i>
+                        <i class="xi-angle-right"></i>
+                    </div>
+                    <div class="num"></div>
+                </div>
+                <div class="right_slide">
+                    <figure>
+                        <img src="./img/culture01.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./img/culture02.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./img/culture03.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./img/culture04.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./img/culture05.jpg" alt="">
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <section class="mainNow">
+            <h2>Shinsegae Now</h2>
+            <div class="inner">
+                <figure>
+                    <div class="case">
+                        <img src="./img/now01.jpg" alt="">
+                    </div>
+                    <div class="over">
+                        <strong>INSTAGRAM</strong>
+                        <p>겨울 제철 과일 딸기, 12종류의<br />
+                            다채로운 딸기를 신세계백화점<br />
+                            푸드마켓에서 만나보세요.</p>
+                        <a href="">more <i class="xi-angle-right"></i></a>
+                    </div>
+                </figure>
+                <figure>
+                    <div class="case">
+                        <img src="./img/now02.jpg" alt="">
+                    </div>
+                    <div class="over">
+                        <strong>INSTAGRAM</strong>
+                        <p>겨울 제철 과일 딸기, 12종류의<br />
+                            다채로운 딸기를 신세계백화점<br />
+                            푸드마켓에서 만나보세요.</p>
+                        <a href="">more <i class="xi-angle-right"></i></a>
+                    </div>
+                </figure>
+                <figure>
+                    <div class="case">
+                        <img src="./img/now03.jpg" alt="">
+                    </div>
+                    <div class="over">
+                        <strong>INSTAGRAM</strong>
+                        <p>겨울 제철 과일 딸기, 12종류의<br />
+                            다채로운 딸기를 신세계백화점<br />
+                            푸드마켓에서 만나보세요.</p>
+                        <a href="">more <i class="xi-angle-right"></i></a>
+                    </div>
+                </figure>
+                <figure>
+                    <div class="case">
+                        <img src="./img/now04.jpg" alt="">
+                    </div>
+                    <div class="over">
+                        <strong>INSTAGRAM</strong>
+                        <p>겨울 제철 과일 딸기, 12종류의<br />
+                            다채로운 딸기를 신세계백화점<br />
+                            푸드마켓에서 만나보세요.</p>
+                        <a href="">more <i class="xi-angle-right"></i></a>
+                    </div>
+                </figure>
+            </div>
 
+        </section>
     </main>
     <footer class="footer">
 
