--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+    <div class="topbanner">
+        <div class="inner">
+        </div>
+    </div>
     <header class="header">
         <div class="inner">
             <h1><a href=""><img src="./img/logo.png" alt=""></a></h1>
