--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/aos.css">
+    <link rel="shortcut icon" href="./img/favicons.png" type="image/x-icon">
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/main.js" defer></script>
     <script src="./js/slick.min.js"></script>
